--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body { padding: 100px;}
   <div class="image-cropper">
     <img src="img/headshot.png" class="rounded" />
 	</div>
-  <h4>Developer, Dancer, Musician, and Event Coordinator.</h4>
+  <h4>Developer, Dancer, and Event Coordinator.</h4>
 	</div>
 	
 <div id="developer"  class="row">
