--- a/index.html
+++ b/index.html
@@ -1,203 +1,70 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Jeff Baucom</title>
-	<!-- Latest compiled and minified CSS -->
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>Your page title here :)</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-	<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/yeti/bootstrap.min.css" rel="stylesheet">
-	<script src="http://code.jquery.com/jquery-2.1.4.js"></script>
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-	<style>
-	.image-cropper {
-    width: 200px;
-    height: 200px;
-    position: relative;
-    overflow: hidden;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    border-radius: 50%;
-}
-img {
-    display: inline;
-    margin: 0 auto;
-    height: 100%;
-    width: auto;
-}
-body { padding: 100px;}
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-#projects img:hover{
-	-webkit-filter: saturate(3);
-}
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Palanquin+Dark" rel="stylesheet">
 
-</style>
+  <link rel="stylesheet" href="css/myStyles.css">
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 
 </head>
 <body>
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Jeff Baucom</a>
-    </div>
+  <!-- Navigation -->
+  <div class="nav-wrapper">
+    <a href="#" class="banner"><p><strong>Jeff Baucom</strong><p></a>
+    <nav class="nav-link-container u-pull-right">
+      
+      <p><a class="nav-link" target="_blank" href="Jeffrey_Baucom.pdf">Resume</a></p>
+      <p><a class="nav-link" target="_blank"href="https://www.linkedin.com/in/jeffbaudotcom/"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
+</a></p>
+      <p><a class="nav-link" target="_blank" href="https://github.com/JeffBaucom"><i class="fa fa-github-square" aria-hidden="true"></i>
+</a></p>
+    </nav>
+  </div>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#developer">Developer</a></li>
-        <li><a href="#dancer">Dancer</a></li>
-        <li><a href="#projects">Projects</a></li>        
-        <li><a href="#links">Links</a></li>
-      </ul>
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="container">
+    <div class="row">
+      <div class="one-half column bio-half">
+        <img class='circle-clip' src="images/jeff1.png" width="400" height="400"></img>
+      </div>
+      <div class="one-half column bio-half">
+              <h1>Hello, my name is Jeff</h1>
+              <h4><strong>I'm on a mission to make the web a more mindful place.</strong></h4>
+        <p>While I consider myself a front end developer, I appreciate having a hand at every layer of the stack. My ambition is to become a full stack developer by immersing myself in experiences that range from front end frameworks with AngularJS and ReactJS to back end technologies like MongoDB, Node.js, and .NET.</p>
+
+        <p>I spend my freetime <a class="p-link" target="_blank" href="https://www.youtube.com/playlist?list=PL8Ks-P_D-js5WAeRwqqJ0iSXZQFEe2BgX">dancing</a> or making <a class="p-link" target="_blank" href="https://soundcloud.com/jkishi">music</a>. I am the former president of Tekstyles, the freestyle dance club at Georgia Tech, through which I helped build the campus dance and Hip-Hop community from the ground up. We now host one of the biggest dance battles in Atlanta each year and throw a campus-wide event each semester.
+        </p>
+      </div>
     </div>
   </div>
-</nav>
 
-<div class="jumbotron" align="center" style="background-color: #ECEFF5;">
-  <div class="image-cropper">
-    <img src="img/headshot.png" class="rounded" />
-	</div>
-  <h4>Developer, Dancer, and Event Coordinator.</h4>
-	</div>
-	
-<div id="developer"  class="row">
-	<div align="center" style="{margin-top: 70px;}"><h2>-Developer-</h2></div>
-	<hr>
-	<div class="col-xs-12 col-md-offset-2" align="left">
-		<h3>Education:</h3>
-			<ul>
-				<li><h4>Georgia Institute of Technology</h4></li>
-			</ul>
-			<p style="text-indent: 50px">-Expected Graduation: Spring 2017</p>
-			<p style="text-indent: 50px">-Major: Computer Science</p>
-			<h3>Languages:</h3>
-				<p>In order of proficiency</p>
-				<ul>
-					<li><h4>Java<h4></li>
-					<li><h4>JavaScript<h4></li>
-					<li><h4>Python<h4></li>
-					<li><h4>HTML/CSS<h4></li>
-					<li><h4>C<h4></li>
-					<li><h4>Matlab<h4></li>
-				</ul>
-			<h3>Frameworks and Software:</h3>
-				<ul>
-					<li><h4>Node.js<h4></li>
-					<li><h4>MongoDB<h4></li>
-					<li><h4>Angular JS<h4></li>
-					<li><h4>Linux<h4></li>
-				</ul>
-            </div>
-</div>
-<div id="dancer" class="row">
-	<div align="center"><h2>-Dancer-</h2></div>
-	<hr>
-	<div class="col-xs-6 col-md-offset-2" align="left">
-		<h3>Affiliations:</h3>
-			<ul>
-				<li><h4>Tekstyles</h4></li>
-				</ul>
-				<p style="text-indent: 50px">President: Spring 2013 - Present</p>
-				<p style="text-indent: 50px">Group Mentor: Spring 2015 - Present</p>
-			<h3>Teaching Experience:</h3>
-				<ul>
-					<li><a href="http://ghd916.wix.com/ghd916"><h4>Greathouse of Dance<h4></a>
-					</li>
-				</ul>
-				<p style="text-indent: 50px">
-						Locking Instructor: Spring 2012 - Fall 2012
-					</p>
-					<ul>
-					<li><a href="http://gtdancetech.wix.com/index"><h4>DanceTech<h4></a></li>
-				</ul>
-				<p style="text-indent: 50px">
-						Hip Hop Instructor: Fall Semester 2013
-				</p>
-		</div>
-</div>
-<div id="projects" class="row" align="center">
-	<div align="center"><h2>-Projects-</h2></div>
-	<hr>
-    <div class="col-xs-5 col-md-4"><img class="hover-images" src="img/tekstylesTh.gif" data-toggle="modal" data-target=".bs-example-modal-lg"></div>        
-    <div class="col-xs-5 col-md-4"><img class="hover-images" src="img/sbthumb.gif" data-toggle="modal" data-target=".bs-example-modal-lg2"></div>        
-    <div class="col-xs-5 col-md-4"><img class="hover-images" src="img/summitTh.gif" data-toggle="modal" data-target=".bs-example-modal-lg3"></div>        
-</div>
-
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content" align="center" style="margin: 20px">
-      	<a href="http://tekstyles.gtorg.gatech.edu/"><img src="img/tekstyles.jpg"></a>
-      	<h2>Tekstyles</h2>
-      	<p>Tekstyles is the only freestyle dance organization at Georgia Tech, since becoming president in 2013, I have restructured the club dramatically:</p>
-      	<ul align="left">
-      	<li>Redesigned practice schedule, geared towards engaging practices that make it easy to join the club</li>
-		<li>Created The Summit</li>
-		<li>Created South Bound</li>
-		<li>Created the mentor system for helping newer dancers gain a foothold while encouraging experienced dancers to challenge themselves</li>
-		<li>Oversaw the adoption of a committee system to encourage members to get involved with the management of the organization</li>
-		</ul>
-    </div>
-  </div>
-</div>
-
-<div class="modal fade bs-example-modal-lg2" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content" align="center" style="margin: 20px">
-      <a href="https://www.facebook.com/events/1431104163850140/"><img src="img/southbound.png"></a>
-      <h2>South Bound</h2>
-      <p align="left" style="margin: 20px">South Bound is a dance competition held annually at Georgia Tech by Tekstyles. My goal in creating South Bound was to emulate the events I had witnessed in other regions of the country, whose presence was lacking from the landscape of the Atlanta dance scene. South Bound is one of a kind in terms of both judge and DJ selection and the diversity of styles represented.</p>
-    </div>
-  </div>
-</div>
-
-<div class="modal fade bs-example-modal-lg3" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content" align="center" style="margin: 20px">
-      <a href="https://www.facebook.com/GTSummit"><img src="img/summitext.jpg"></a>
-      <h2>The Summit</h2>
-      	<p align="left" style="margin: 20px">Created by Buzzbeats, Georgia Tech’s beatboxing organization and Tekstyles, Georgia Tech’s freestyle dance organization, The Summit is a semesterly hip hop event that serves as a gathering of artists in the Georgia Tech community that associate themselves with hip hop culture.</p>
-
-		<p align="left" style="margin: 20px">We are currently preparing for the fourth edition of The Summit, on September 17th, 2015 in the Georgia Tech Student Center Ballroom. This time, Georgia Tech’s Student Center Programs Council has joined the planning team alongside BuzzBeats and Tekstyles. In the past two editions of The Summit, we have encouraged participation from other colleges and the general public.</p>
-
-		<p align="left" style="margin: 20px">The Summit culminates in tournament-style beatbox and all-styles dance battles. Judged by talented local dancers and beatboxers, The Summit provides a competitive outlet not only for dancers and beatboxers at Georgia Tech but for the entire Atlanta hip hop community.</p>
-    </div>
-  </div>
-</div>
-<div id="links" class="row" align="center">
-	<div align="center" style="{margin-top: 100px;}"><h2>-Links-</h2></div>
-	<hr>
-	<div class="col-xs-12 col-md-6">
-		<h4>Inspiration &amp Friends</h4>
-		<ul align="center" style="list-style-position: inside">
-		<li><a href="http://byvianca.com/">Vianca(Filmographer)</a></li>
-		<li><a href="http://www.aminixon.com/">Tsunami(Visual Artist)</a></li>
-		<li><a href="http://www.mvmnt.co/">MVMNT Studio(Dance Studio)</a></li>
-		<ul>
-
-	</div>
-	<div class="col-xs-12 col-md-6 col" align="center">
-		<h4>Where to find Me</h4>
-		<ul align="center" style="list-style-position: inside">
-		<li><a href="https://github.com/jeffbaucom">GitHub</a></li>
-		<li><a href="https://soundcloud.com/jkishi">SoundCloud</a></li>
-		<li><a href="https://www.youtube.com/channel/UCMgzkEiG1lwqiaj1kA2EE7A">YouTube</a></li>
-		<li><a href="https://www.linkedin.com/pub/jeffrey-baucom/92/254/a7">LinkedIn</a></li>
-		</ul>
-	</div>
-	     
-</div>
-
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
