--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
-  <meta name="description" content="">
+  <title>Jeff Baucom - Web Developer</title>
+  <meta name="description" content="Jeff Baucom">
   <meta name="author" content="">
 
   <!-- Mobile Specific Metas
