--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
         <p>I spend my freetime <a class="p-link" target="_blank" href="https://www.youtube.com/playlist?list=PL8Ks-P_D-js5WAeRwqqJ0iSXZQFEe2BgX">dancing</a> or making <a class="p-link" target="_blank" href="https://soundcloud.com/jkishi">music</a>. I am the former president of Tekstyles, the freestyle dance club at Georgia Tech, through which I helped build the campus dance and Hip-Hop community from the ground up. We now host one of the biggest dance battles in Atlanta each year and throw a campus-wide event each semester.
         </p>
+        <p>If you'd like to get in touch with me, feel free to send me an <a href="mailto:jbaucom3@gatech.edu" target="_top">email</a></p>
       </div>
     </div>
   </div>
